// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate 1`] = `
"import { $route, nextPages } from 'next-typed-pages'

export const pages = nextPages({
  about: $route,
  index: $route,
  users: {
    '[userId]': {
      index: $route,
      posts: {
        '[postId]': $route,
      },
    },
    index: $route,
  },
})
"
`;

exports[`generate 2`] = `
"import { $route, nextPages } from 'next-typed-pages'

export const pages = nextPages({
  about: $route,
  index: $route,
  users: {
    '[userId]': {
      index: $route,
      posts: {
        '[postId]': $route,
      },
    },
    index: $route,
  },
})

export default pages
"
`;
